# rusty-kiln

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml
board/rustykiln/: fp-info-cache  power.kicad_sch  rustykiln.kicad_pcb  rustykiln.kicad_prl  rustykiln.kicad_pro  rustykiln.kicad_sch
src/: main.rs  programs.rs
